# asr-hw

./: Makefile  README.md  REPORT.md  pyproject.toml  test.py  train.py
default_test_model/: config.json
hw_asr/: config.json
hw_asr/augmentations/: __init__.py
hw_asr/augmentations/spectrogram_augmentations/: FrequencyMasking.py  TimeMasking.py  __init__.py
hw_asr/augmentations/wave_augmentations/: Gain.py  GaussianNoise.py  PitchShift.py  __init__.py
hw_asr/base/: base_dataset.py  base_trainer.py
hw_asr/collate_fn/: collate.py
hw_asr/configs/: one_batch_test.json  one_batch_test_baseline.json
hw_asr/datasets/: common_voice.py  ljspeech_dataset.py
hw_asr/logger/: wandb.py
hw_asr/loss/: CTCLossWrapper.py
hw_asr/metric/: __init__.py  cer_metric.py  utils.py  wer_metric.py
hw_asr/model/: __init__.py  deepspeech2_model.py
hw_asr/tests/: test_dataloader.py  test_text_encoder.py
hw_asr/text_encoder/: char_text_encoder.py  ctc_char_text_encoder.py
hw_asr/trainer/: trainer.py
hw_asr/utils/: util.py
language_models/: download_lm.py
utils/: config_clean.json  pyproject_macos.txt
